correct the animation of the overlayCircle behind the card image

--- a/src/components/FeatureCard/FeatureCard.module.scss
+++ b/src/components/FeatureCard/FeatureCard.module.scss
@@ -49,26 +49,26 @@
   margin: 0 auto;
   will-change: transform, opacity;
 
-  &::before {
-    position: absolute;
-    content: "";
-    display: block;
-    top: 50%;
-    left: 50%;
-    width: calc(var(--card-width, 220px) + 60px);
-    height: calc(var(--card-width, 220px) + 60px);
-    background-color: var(--circle-color);
-    opacity: var(--dynamic-opacity, 1) !important;
-    // transform: translate(-50%, -50%);
-    border-radius: 50%;
-    z-index: 1;
-    will-change: transform, opacity;
-    transform: translate(-50%, -50%) scale(var(--circle-scale, 1));
-  }
+  // &::before {
+  //   position: absolute;
+  //   content: "";
+  //   display: block;
+  //   top: 50%;
+  //   left: 50%;
+  //   width: calc(var(--card-width, 220px) + 60px);
+  //   height: calc(var(--card-width, 220px) + 60px);
+  //   background-color: var(--circle-color);
+  //   opacity: var(--dynamic-opacity, 1) !important;
+  //   // transform: translate(-50%, -50%);
+  //   border-radius: 50%;
+  //   z-index: 1;
+  //   will-change: transform, opacity;
+  //   transform: translate(-50%, -50%) scale(var(--circle-scale, 1));
+  // }
 
-  &.selected::before {
-    animation: scale-in 0.5s linear forwards;
-  }
+  // &.selected::before {
+  //   animation: scale-in 0.5s linear forwards;
+  // }
 
   &.expanding::before {
     animation: expand-left 0.7s ease-out forwards;
